--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,10 @@ install:
 - composer install
 - composer run-script --list
 - composer run-script -- symfony-skeleton --ansi
-- composer create-project symfony/website-skeleton
+
+- composer create-project --no-install symfony/website-skeleton
+- composer --working-dir=website-skeleton config bin-dir bin
+- composer --working-dir=website-skeleton install
 
 before_script:
 # - curl_security_check composer.lock
