--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,7 @@
             "@composer --working-dir=skeleton require symfony/maker-bundle --dev",
             "@composer --working-dir=skeleton require symfony/phpunit-bridge --dev",
             "@composer --working-dir=skeleton require symfony/profiler-pack --dev",
+            "@composer --working-dir=skeleton require symfony/symfony/test-pack --dev",
             "@composer --working-dir=skeleton require symfony/web-server-bundle --dev"
         ]
     }
