--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "symfony/twig-bundle": "Used by script symfony-skeleton",
         "symfony/validator": "Used by script symfony-skeleton",
         "symfony/web-link": "Used by script symfony-skeleton",
-        "symfony/webpack-encore-pack": "Used by script symfony-skeleton",
+        "symfony/webpack-encore-pack": "No more included in website-skeleton since 4.1.2",
         "symfony/browser-kit": "Used by script symfony-skeleton (dev)",
         "symfony/css-selector": "Used by script symfony-skeleton (dev)",
         "symfony/debug-pack": "Used by script symfony-skeleton (dev)",
@@ -50,7 +50,6 @@
             "@composer --working-dir=skeleton require symfony/twig-bundle",
             "@composer --working-dir=skeleton require symfony/validator",
             "@composer --working-dir=skeleton require symfony/web-link",
-            "@composer --working-dir=skeleton require symfony/webpack-encore-pack",
             "@composer --working-dir=skeleton require symfony/browser-kit --dev",
             "@composer --working-dir=skeleton require symfony/css-selector --dev",
             "@composer --working-dir=skeleton require symfony/debug-pack --dev",
