--- a/.travis.yml
+++ b/.travis.yml
@@ -77,6 +77,7 @@ after_script:
 - composer --working-dir=skeleton show --latest
 - composer --working-dir=skeleton show --latest > skeleton.txt
 - composer --working-dir=website-skeleton why ocramius/proxy-manager
+- composer --working-dir=website-skeleton update ocramius/proxy-manager
 - composer --working-dir=skeleton why ocramius/proxy-manager
 - composer --working-dir=website-skeleton why symfony/polyfill-ctype
 - composer --working-dir=skeleton why symfony/polyfill-ctype
