--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,7 @@ install:
 - composer run-script -- symfony-skeleton --ansi
 
 - composer create-project --no-install symfony/website-skeleton
+- ls --color website-skeleton # composer.lock ?
 - composer --working-dir=website-skeleton config bin-dir bin
 - composer --working-dir=website-skeleton install
 
@@ -72,12 +73,12 @@ after_script:
 - ls --recursive --color skeleton/config
 
 
+- composer --working-dir=website-skeleton update ocramius/proxy-manager # Looks almost like a bug in composer!
 - composer --working-dir=website-skeleton show --latest
 - composer --working-dir=website-skeleton show --latest > website-skeleton.txt
 - composer --working-dir=skeleton show --latest
 - composer --working-dir=skeleton show --latest > skeleton.txt
 - composer --working-dir=website-skeleton why ocramius/proxy-manager
-- composer --working-dir=website-skeleton update ocramius/proxy-manager
 - composer --working-dir=skeleton why ocramius/proxy-manager
 - composer --working-dir=website-skeleton why symfony/polyfill-ctype
 - composer --working-dir=skeleton why symfony/polyfill-ctype
