--- a/.travis.yml
+++ b/.travis.yml
@@ -44,10 +44,13 @@ install:
 - composer run-script --list
 - composer run-script -- symfony-skeleton --ansi
 
-- composer create-project -vvv --no-install symfony/website-skeleton
-- file website-skeleton/composer.lock
+- composer create-project --no-install symfony/website-skeleton
 - composer --working-dir=website-skeleton config bin-dir bin
-- composer --working-dir=website-skeleton -vvv install
+- composer --working-dir=website-skeleton update
+# composer update and not install because
+# * there is a composer.lock file 
+# * and it may be slightly outdated, compared to the fresh update in skeleton directory
+
 
 before_script:
 # - curl_security_check composer.lock
@@ -73,15 +76,11 @@ after_script:
 - ls --recursive --color skeleton/config
 
 
-- composer --working-dir=website-skeleton update ocramius/proxy-manager # Looks almost like a bug in composer!
 - composer --working-dir=website-skeleton show --latest
 - composer --working-dir=website-skeleton show --latest > website-skeleton.txt
 - composer --working-dir=skeleton show --latest
 - composer --working-dir=skeleton show --latest > skeleton.txt
-- composer --working-dir=website-skeleton why ocramius/proxy-manager
-- composer --working-dir=skeleton why ocramius/proxy-manager
-- composer --working-dir=website-skeleton why symfony/polyfill-ctype
-- composer --working-dir=skeleton why symfony/polyfill-ctype
+- echo see README.md about symfony/polyfill-ctype
 - colordiff --minimal --side-by-side website-skeleton.txt skeleton.txt
 - $GOPATH/bin/ccat composer.json
 - $GOPATH/bin/ccat website-skeleton/composer.json
