--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 ---
 language: php
-sudo: required # Trying to increase memory.
+# sudo: required # Trying to increase memory.
 
 addons:
   apt:
@@ -45,12 +45,36 @@ install:
 - composer run-script --list
 - composer run-script -- symfony-skeleton --ansi
 
-- composer create-project --no-install symfony/website-skeleton
-- composer --working-dir=website-skeleton config bin-dir bin
-- composer --working-dir=website-skeleton update
+- |
+  composer create-project --no-install symfony/website-skeleton
+  composer --working-dir=website-skeleton config bin-dir bin
+  composer --working-dir=website-skeleton update symfony/flex
+  composer --working-dir=website-skeleton update symfony/yaml
+  composer --working-dir=website-skeleton update symfony/console
+  composer --working-dir=website-skeleton update symfony/framework-bundle
+  composer --working-dir=website-skeleton update sensio/framework-extra-bundle
+  composer --working-dir=website-skeleton update symfony/asset
+  composer --working-dir=website-skeleton update symfony/expression-language
+  composer --working-dir=website-skeleton update symfony/form
+  composer --working-dir=website-skeleton update symfony/monolog-bundle
+  composer --working-dir=website-skeleton update symfony/orm-pack
+  composer --working-dir=website-skeleton update symfony/process
+  composer --working-dir=website-skeleton update symfony/security-bundle
+  composer --working-dir=website-skeleton update symfony/serializer-pack
+  composer --working-dir=website-skeleton update symfony/swiftmailer-bundle
+  composer --working-dir=website-skeleton update symfony/twig-bundle
+  composer --working-dir=website-skeleton update symfony/validator
+  composer --working-dir=website-skeleton update symfony/web-link
+  composer --working-dir=website-skeleton update symfony/debug-pack
+  composer --working-dir=website-skeleton update symfony/maker-bundle
+  composer --working-dir=website-skeleton update symfony/profiler-pack
+  composer --working-dir=website-skeleton update symfony/test-pack
+  composer --working-dir=website-skeleton update symfony/web-server-bundle
+  composer --working-dir=website-skeleton update
 # composer update and not install because
 # * there is a composer.lock file 
 # * and it may be slightly outdated, compared to the fresh update in skeleton directory
+# But memory issues: making small etaps!
 
 
 before_script:
