--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,7 @@ install:
 - |
   composer create-project --no-install symfony/website-skeleton
   composer --working-dir=website-skeleton config bin-dir bin
+  composer --working-dir=website-skeleton install
   composer --working-dir=website-skeleton update symfony/flex
   composer --working-dir=website-skeleton update symfony/yaml
   composer --working-dir=website-skeleton update symfony/console
