--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,8 @@ matrix:
 before_install:
 - go get -u github.com/jingweno/ccat
 - pip install --user pygments
-- wget https://github.com/travis-util/https-security-checker/archive/master.zip --output-document=- | jar xvf /dev/stdin
-- . https-security-checker-master/init-source.bash
+# - wget https://github.com/travis-util/https-security-checker/archive/master.zip --output-document=- | jar xvf /dev/stdin
+# - . https-security-checker-master/init-source.bash
 # Disabling Xdebug - Debugger and Profiler Tool for PHP
 - |
   php -r "print_r(get_loaded_extensions(TRUE));"
@@ -80,11 +80,10 @@ install:
 
 
 before_script:
-# - curl_security_check composer.lock
 - ~/.composer/vendor/bin/security-checker security:check skeleton/composer.lock
 - ~/.composer/vendor/bin/security-checker security:check website-skeleton/composer.lock
-- curl_security_check skeleton/composer.lock
-- curl_security_check website-skeleton/composer.lock
+# - curl_security_check skeleton/composer.lock
+# - curl_security_check website-skeleton/composer.lock
 #^ This checks that the application doesn't use dependencies with known security vulnerabilities
 
 
