--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     },
     "scripts": {
         "symfony-skeleton": [
-            "@composer create-project --no-install symfony/skeleton",
+            "@composer create-project --no-install symfony/skeleton:^3.4",
             "@composer --working-dir=skeleton config bin-dir bin",
             "@composer --working-dir=skeleton install",
             "@composer --working-dir=skeleton require sensio/framework-extra-bundle",
