--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "symfony/skeleton": "Used by script symfony-skeleton",
         "sensio/framework-extra-bundle": "Used by script symfony-skeleton",
         "symfony/asset": "Used by script symfony-skeleton",
+        "symfony/contracts": "Used by script symfony-skeleton",
         "symfony/expression-language": "Used by script symfony-skeleton",
         "symfony/form": "Used by script symfony-skeleton",
         "symfony/monolog-bundle": "Used by script symfony-skeleton",
@@ -36,6 +37,7 @@
             "@composer --working-dir=skeleton install",
             "@composer --working-dir=skeleton require sensio/framework-extra-bundle",
             "@composer --working-dir=skeleton require symfony/asset",
+            "@composer --working-dir=skeleton require symfony/contracts",
             "@composer --working-dir=skeleton require symfony/expression-language",
             "@composer --working-dir=skeleton require symfony/form",
             "@composer --working-dir=skeleton require symfony/monolog-bundle",
