--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ install:
 - composer run-script -- symfony-skeleton --ansi
 
 - |
-  composer create-project --no-install symfony/website-skeleton
+  composer create-project --no-install symfony/website-skeleton:^3.4
   composer --working-dir=website-skeleton config bin-dir bin
   composer --working-dir=website-skeleton install
   composer --working-dir=website-skeleton update symfony/flex
