--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "symfony/security-bundle": "Used by script symfony-skeleton",
         "symfony/serializer-pack": "Used by script symfony-skeleton",
         "symfony/swiftmailer-bundle": "Used by script symfony-skeleton",
+        "symfony/translation": "Used by script symfony-skeleton",
         "symfony/twig-bundle": "Used by script symfony-skeleton",
         "symfony/validator": "Used by script symfony-skeleton",
         "symfony/web-link": "Used by script symfony-skeleton",
@@ -46,6 +47,7 @@
             "@composer --working-dir=skeleton require symfony/security-bundle",
             "@composer --working-dir=skeleton require symfony/serializer-pack",
             "@composer --working-dir=skeleton require symfony/swiftmailer-bundle",
+            "@composer --working-dir=skeleton require symfony/translation",
             "@composer --working-dir=skeleton require symfony/twig-bundle",
             "@composer --working-dir=skeleton require symfony/validator",
             "@composer --working-dir=skeleton require symfony/web-link",
