--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
             "@composer create-project --no-install symfony/skeleton",
             "@composer --working-dir=skeleton config bin-dir bin",
             "@composer --working-dir=skeleton install",
+            "@composer --working-dir=skeleton update",
             "@composer --working-dir=skeleton require sensio/framework-extra-bundle",
             "@composer --working-dir=skeleton require symfony/asset",
             "@composer --working-dir=skeleton require symfony/expression-language",
