--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,6 @@
             "@composer --working-dir=skeleton config bin-dir bin",
             "@composer --working-dir=skeleton install",
             "@composer --working-dir=skeleton update # composer.lock file may be slightly outdated",
-            "": "composer.lock file may be slightly outdated",
             "@composer --working-dir=skeleton require sensio/framework-extra-bundle",
             "@composer --working-dir=skeleton require symfony/asset",
             "@composer --working-dir=skeleton require symfony/expression-language",
@@ -56,6 +55,7 @@
             "@composer --working-dir=skeleton require symfony/profiler-pack --dev",
             "@composer --working-dir=skeleton require symfony/test-pack --dev",
             "@composer --working-dir=skeleton require symfony/web-server-bundle --dev"
-        ]
+        ],
+        "": "composer.lock file may be slightly outdated"
     }
 }
