--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     },
     "scripts-descriptions": {
         "symfony-skeleton": "Create project using symfony/skeleton",
-        "//b": "composer.lock file may be slightly outdated"
+        "//a": "composer.lock file may be slightly outdated"
     },
     "scripts": {
         "symfony-skeleton": [
@@ -57,6 +57,9 @@
             "@composer --working-dir=skeleton require symfony/test-pack --dev",
             "@composer --working-dir=skeleton require symfony/web-server-bundle --dev"
         ],
-        "//a": "composer.lock file may be slightly outdated"
+        "//a": ""
+    },
+    "_comments": {
+        "foo/bar": "pinned until XXX is resolved"
     }
 }
