--- a/composer.json
+++ b/composer.json
@@ -29,14 +29,14 @@
     },
     "scripts-descriptions": {
         "symfony-skeleton": "Create project using symfony/skeleton",
-        "//a": "composer.lock file may be slightly outdated"
+        "//a": "update needed because composer.lock file may be slightly outdated"
     },
     "scripts": {
         "symfony-skeleton": [
             "@composer create-project --no-install symfony/skeleton",
             "@composer --working-dir=skeleton config bin-dir bin",
             "@composer --working-dir=skeleton install",
-            "@composer --working-dir=skeleton update # composer.lock file may be slightly outdated",
+            "@composer --working-dir=skeleton update",
             "@composer --working-dir=skeleton require sensio/framework-extra-bundle",
             "@composer --working-dir=skeleton require symfony/asset",
             "@composer --working-dir=skeleton require symfony/expression-language",
@@ -58,8 +58,5 @@
             "@composer --working-dir=skeleton require symfony/web-server-bundle --dev"
         ],
         "//a": ""
-    },
-    "_comments": {
-        "foo/bar": "pinned until XXX is resolved"
     }
 }
